--- a/samp.html
+++ b/samp.html
@@ -10,6 +10,9 @@
 
     <main>Hello Guys today we will do the main tag</main>
 
-    
+    <footer>
+        <p> &copy; TerraCamp</p>
+        <p> 2012-2024</p>
+    </footer>
 </body>
 </html>
