--- a/samp.html
+++ b/samp.html
@@ -8,7 +8,7 @@
 <body>
     <h1>TRRRR</h1>
 
-    <main>Hello Guys today we will do the main tag</main>
+    <main>Hello Guys today we will do fhnvhhnh main tag</main>
 
     <footer>
         <p> &copy; TerraCamp</p>
