--- a/samp.html
+++ b/samp.html
@@ -8,14 +8,14 @@
 <body>
     <h1>TRRRR</h1>
 
-    <main>Hello Guys today we will do fhnvhhnh main tag</main>
+    <main>Hello Guys today we will do Hiw main tag</main>
 
     <footer>
         <p> &copy; TerraCamp</p>
         <p> 2012-2024</p>
     </footer>
     <h1>Hatdog/Borger 4
-
-    </h1>
+         </h1>
+    <b>BOLD</b>
 </body>
 </html>
